--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -28,7 +28,7 @@
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782730.md#1" target="_blank">【馨香雅句】居天下之中者曰中国</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782730.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1d098c32620b238f9d6b41244b7690c9-150x120.jpg" align ="left"></a>世界的很多文明都和中国有关，据考古学家发现在中美洲，奥尔梅克文明是这里的发源，也是玛雅文化的前身，然而研究奥尔梅克文明起源的海内外学者们发现：这里的文明竟然是中国商朝人带去的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月11日 12:27 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777798.md#1" target="_blank">云游商旅之拾遗篇（上）</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/8/n11777798.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/shutterstock_432664555-150x120.jpg" align ="left"></a>某年过年，云在这个山坡间贩卖，时常有位老妇人走过，与云相谈甚欢，在云旁边，一边聊着也一边帮云向走过的游人介绍云的手做品。年节结束后，生意开始渐渐下滑，天气也开始变化，云心想，再卖个几天，今年这个地方就差不多了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782712.md#1" target="_blank">生命的涟漪，已在扩散</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11782712.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1403082235382483-150x120.jpg" align ="left"></a>人心向善的变化，可能就在一念间，我们敏锐地抓住人性善良的瞬间光辉，藉由生命感动生命的过程，让它不断地扩大……......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 11:16 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank">野火灾情惨重 澳洲青年开车四处救无尾熊</a><br></h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/10/n11781469.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1185446524-150x120.jpg" align ="left"></a>澳洲野火自去年9月延烧至今，已经烧掉相当于韩国那么大的林地，导致5亿只动物死亡，其中包括大量澳洲特有的可爱动物无尾熊。除了澳洲政府致力于灭火之外，当地民众也尽力救灾，其中包括弥迦（Micah）和迦勒（Caleb）这两名年轻男子。他们开车四处搜寻，试图拯救受灾的无尾熊。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月10日 1:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/13/n11790520.md#1" target="_blank">神韵行（二十九）</a><br></h3>久怀慕蔺，来朝天国，一赌盛唐气象。 龙楼凤阙五云光，问是在、人间天上？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月13日 9:19 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11788108.md#1" target="_blank">诗歌：冰河</a><br></h3> 半封河面回冰雪， 风卷隆冬天气寒。 树结雾凇山白发， 河凝霞影水红颜。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:52 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11788065.md#1" target="_blank">七律：雾霾</a><br></h3> 平地雾霾三万丈， 遮天敝日覆重城。 山河失色愁容漫， 未日无声惨淡萦。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/qgedzr297/djy/blob/master/gb/20/1/12/n11788059.md#1" target="_blank">一七令．雪中梅</a><br></h3>梅。 雪趣，梅归。 凌寒放，北风吹。 天寒地冻，梅展芳菲。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月12日 10:35 PM			</td></tr>
